# Foresight-x

./: .env.example  .gitignore  README.md  foresight_x_product_spec.md  foresight_x_technical_architecture.md  pyproject.toml  requirements.txt
data/profiles/: demo_user.json
foresight_x/: README.md  __init__.py  config.py  schemas.py  structured_predict.py
foresight_x/decision/: __init__.py  recommender.py  reflector.py
foresight_x/extraction/: __init__.py  atomic_claims.py
foresight_x/harness/: __init__.py  improvement_loop.py  trace.py  trace_index.py
foresight_x/inference/: __init__.py  irrationality.py  option_generator.py
foresight_x/orchestration/: __init__.py  llm_factory.py  pipeline.py  workflow.py
foresight_x/perception/: __init__.py  clarify_gate.py  layer.py  query_enhance.py
foresight_x/personalization/: __init__.py  ingest.py
foresight_x/profile/: memory_structured.py  merge.py
foresight_x/prompts/: __init__.py  evaluator.py  future_simulator.py  irrationality.py  option_generator.py  perception.py  recommender.py  reflector.py
foresight_x/retrieval/: __init__.py  memory.py  query_text.py  recent_events_fusion.py
foresight_x/shadow/: __init__.py  chat.py  store.py
foresight_x/simulation/: __init__.py  evaluator.py  future_simulator.py
foresight_x/ui/: __init__.py  api_server.py  cli.py
tests/: conftest.py  test_config.py  test_evaluator.py  test_future_simulator.py  test_irrationality.py  test_memory.py  test_memory_structured_merge.py  test_option_generator.py  test_orchestration_integration.py  test_perception.py  test_personalization_ingest.py  test_pipeline.py  test_recent_events_fusion.py  test_recommender.py  test_reflector.py  test_schemas.py  test_shadow_chat_memory_fallback.py  test_simulation_decision_e2e.py  test_trace_index.py  test_user_recent_context.py  test_workflow.py  test_world_cache.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/app/: App.tsx
(+19 files in other folders)
